--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,12 @@
 apply plugin : 'java'
 sourceSets.main.java.srcDir 'src'
+sourceSets.test.java.srcDir 'test'
 version='1.0-SNAPSHOT'
+
+dependencies {
+    testCompile 'org.testng:testng:6.8.8'
+}
+
+repositories {
+    mavenCentral()
+}
