--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ apply plugin : 'java'
 sourceSets.main.java.srcDir 'src'
 sourceSets.test.java.srcDir 'test'
 version='1.0-SNAPSHOT'
+sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_7
 
 dependencies {
     testCompile 'org.testng:testng:6.8.8'
@@ -9,4 +11,9 @@ dependencies {
 
 repositories {
     mavenCentral()
+}
+
+jar {
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    manifest.attributes "Main-Class": "ru.yaal.doublelayoutmenu.Main"
 }
