--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,14 @@
-apply plugin : 'java'
+apply plugin : 'application'
 sourceSets.main.java.srcDir 'src'
 sourceSets.test.java.srcDir 'test'
-version='1.0-SNAPSHOT'
+version='1.0'
+mainClassName = "ru.yaal.doublelayoutmenu.Main"
 sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
 
 dependencies {
-    compile 'org.slf4j:slf4j-api:1.7.7', 'org.slf4j:slf4j-simple:1.7.7'
-    testCompile 'org.testng:testng:6.8.8'
+    compile 'org.slf4j:slf4j-api:1.7.12', 'org.slf4j:slf4j-simple:1.7.12'
+    testCompile 'org.testng:testng:6.8.21', 'org.hamcrest:hamcrest-all:1.3'
 }
 
 repositories {
