--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
 
 dependencies {
-    compile 'org.slf4j:slf4j-api:1.7.12', 'org.slf4j:slf4j-simple:1.7.12'
+    compile 'org.slf4j:slf4j-api:1.7.12', 'org.slf4j:slf4j-simple:1.7.12',
+            'org.apache.commons:commons-io:1.3.2'
     testCompile 'org.testng:testng:6.8.21', 'org.hamcrest:hamcrest-all:1.3'
 }
 
