--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ targetCompatibility = JavaVersion.VERSION_1_7
 
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.12', 'org.slf4j:slf4j-simple:1.7.12',
-            'org.apache.commons:commons-io:1.3.2'
+            'org.apache.commons:commons-lang3:3.4', 'commons-io:commons-io:2.4'
     testCompile 'org.testng:testng:6.8.21', 'org.hamcrest:hamcrest-all:1.3'
 }
 
